[gd_scene load_steps=4 format=3 uid="uid://kmlqtd3mxg3n"]

[ext_resource type="Script" path="res://scripts/reloj.gd" id="1_7a30m"]
[ext_resource type="Texture2D" uid="uid://ctq7yc0b56px0" path="res://assets/puzzles/reloj-pendulo-sin-agujas.png" id="2_e2o7y"]
[ext_resource type="Texture2D" uid="uid://dfxwnjl4b2006" path="res://assets/propio/puzzle_reloj.png" id="3_cd0m7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7a30m")
metadata/_edit_horizontal_guides_ = [333.0]
metadata/_edit_vertical_guides_ = [564.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fondo" type="ColorRect" parent="CanvasLayer"]
offset_left = 209.0
offset_top = -2.0
offset_right = 916.0
offset_bottom = 646.0
color = Color(0.4, 0.223529, 0.192157, 1)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(561, 1164)
scale = Vector2(7.55, 7.55)
texture = ExtResource("2_e2o7y")

[node name="img_reloj" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(564, 331)
scale = Vector2(19.065, 19.065)
texture = ExtResource("3_cd0m7")

[node name="hour_arrow" type="ColorRect" parent="CanvasLayer"]
offset_left = 554.0
offset_top = 232.0
offset_right = 574.0
offset_bottom = 341.0
pivot_offset = Vector2(10, 101)
color = Color(0.309804, 0.227451, 0.152941, 1)

[node name="hour_button" type="TextureButton" parent="CanvasLayer/hour_arrow"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 92.0

[node name="minute_arrow" type="ColorRect" parent="CanvasLayer"]
offset_left = 557.0
offset_top = 163.0
offset_right = 571.0
offset_bottom = 341.0
rotation = 1.5708
pivot_offset = Vector2(7, 170)
color = Color(0.309804, 0.227451, 0.152941, 1)

[node name="minute_button" type="TextureButton" parent="CanvasLayer/minute_arrow"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 161.0

[connection signal="pressed" from="CanvasLayer/hour_arrow/hour_button" to="." method="_on_hour_button_pressed"]
[connection signal="pressed" from="CanvasLayer/minute_arrow/minute_button" to="." method="_on_minute_button_pressed"]
